Bug 225243 - postscript output inverted in xft build configuration. Patch by kherron, r=tor, sr=bzbarsky, a=dbaron